--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,3 +1,6 @@
+
+$color-primary: blueviolet;
+
 .main {
   display: flex;
   flex-direction: column;
@@ -5,6 +8,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-color: $color-primary;
 }
 
 .description {
